k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: stock-exchange
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
        - name: init-sql-scripts
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: mysql-data
        emptyDir: {}
      - name: init-sql-scripts
        configMap:
          name: mysql-init-script
